--- a/style.css
+++ b/style.css
@@ -16,3 +16,19 @@ box-shadow: 2px 4px rgba(hsl(320, 100%, 50%), rgb(2, 0, 128), rgb(0, 255, 0), al
 
 
 }
+.cabecalho{
+    height: 20%;
+    width:95%;
+    padding 20px;
+    margin:5px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+     border-bottom: #000000 ;}
+titulo{
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 24px;
+    text-shadow:2px 4px rgba(hsl(352, 100%, 50%), rgb(2, 0, 128), rgb(0, 255, 0), alpha)
+    color(srgb red rgb(0, 23, 128) blue)
+}    
